syntax = "proto2";

package jsontest;

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

enum MyEnum {
  UNKNOWN = 0;
  V1 = 1;
  V2 = 2;
}

message MyTest {
  optional string hello = 1;
  optional int32 foobar = 2;
  optional int64 bazinga = 3;
  repeated string primitive_sequence = 4;
  repeated MyTest rep_message = 5;
  optional MyTest opt_message = 6;

  map<string, int32> string_to_int32 = 7;
  map<int32, MyTest> int_to_mytest = 8;

  repeated MyEnum rep_enum = 9;
  optional MyEnum opt_enum = 10;
  map<int32, MyEnum> int_to_enum = 11;
  map<bool, string> bool_to_string = 12;
  map<string, bool> string_to_bool = 13;
  optional bytes opt_bs = 14;
  optional bool opt_bool = 15;

  oneof trick_or_treat {
    int32 trick = 16;
    MyTest treat = 17;
  }

  map<fixed64, bytes> fixed64_to_bytes = 18;

}

message IntFields {
  optional int32 int = 1;
  optional int64 long = 2;
  optional uint32 uint = 3;
  optional uint64 ulong = 4;
  optional sint32 sint = 5;
  optional sint64 slong = 6;
  optional fixed32 fixint = 7;
  optional fixed64 fixlong = 8;
}

message WellKnownTest {
  optional google.protobuf.Duration duration = 1;
  optional google.protobuf.Timestamp timestamp = 2;
}

message DoubleFloat {
  optional double d = 1;
  optional float f = 2;
}
